--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 05 09:56:32 CET 2020
-sdk.dir=/Users/amohamed/Library/Android/sdk
+#Sat Sep 26 20:51:06 CST 2020
+sdk.dir=D\:\\tools\\sdk
